<resources>
    <string name="app_name">MoviesApp</string>
    <string name="search">Search</string>
    <string name="enter_movie_title_please">Enter Movie Title Please</string>
    <string name="search_movies">Search Movies</string>
    <string name="text_title">Text_Title</string>
    <string name="_2016">2016</string>
    <string name="go_back">Go Back</string>
    <string name="description">Description</string>
    <string name="_7_8">7.8</string>
    <string name="romantic">Romantic</string>
    <string name="_186_min">186 min</string>
    <string name="_2022">2022</string>
    <string name="favourites">Favourites</string>
    <string name="search_movie">Search Movie</string>
    <string name="favorites">Favorites</string>
    <string name="movie_title">Movie Title</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
</resources>