<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="377dp"
        android:layout_height="369dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textColor="#FFFF00"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/movieYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2022"
            android:textColor="#CCCCCC"
            android:textSize="16sp"
            android:paddingEnd="12dp" />

        <TextView
            android:id="@+id/movieRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_186_min"
            android:textColor="#CCCCCC"
            android:textSize="16sp"
            android:paddingEnd="12dp" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romantic"
            android:textColor="#CCCCCC"
            android:textSize="16sp"
            android:paddingEnd="12dp" />

        <TextView
            android:id="@+id/movieRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_8"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/movieDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#E0E0E0"
        android:background="#5b5b5b"
        android:textSize="18sp"
        android:paddingBottom="80dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginRight="25dp"
            android:focusable="true"
            android:backgroundTint="#0b5394"
            android:text="Update" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="12dp"
            android:focusable="true"
            android:text="Delete"
            android:backgroundTint="#D32F2F"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="12dp"
            android:focusable="true"
            android:text="backBtn" />
    </LinearLayout>
</LinearLayout>
